--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.2.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"fs": "^0.0.1-security",
 		"nodemon": "^2.0.20"
 	}
 }
